--- a/sept/sept/index.html
+++ b/sept/sept/index.html
@@ -37,12 +37,6 @@
     <div id="mensaje">Asi me gusta, que me hagan caso jajaja</div>
     <button class="boton" id="botonSecundario" style="display: none;" onclick="location.href='FLORES.html'">Presiona de nuevo</button>
 
-    <script>
-        function mostrarMensaje() {
-            document.getElementById("botonPrincipal").style.display = "none"; // Oculta el primer botón
-            document.getElementById("mensaje").style.display = "block"; // Muestra el mensaje
-            document.getElementById("botonSecundario").style.display = "block"; // Muestra el segundo botón
-        }
-    </script>
+        <script src="main.js"></script>
 </body>
 </html>
