--- a/sept/sept/index.html
+++ b/sept/sept/index.html
@@ -35,7 +35,7 @@
     </div>
     <button class="boton" id="botonPrincipal" onclick="mostrarMensaje()">Presiona aquí</button>
     <div id="mensaje">Asi me gusta, que me hagan caso jajaja</div>
-    <button class="boton" id="botonSecundario" style="display: none;" onclick="location.href='FLORES.html'">Presiona de nuevo</button>
+    <button class="boton" id="botonSecundario" style="display: none;" onclick="location.href='rregalo.html'">Presiona de nuevo</button>
 
         <script src="main.js"></script>
 </body>
