--- a/sept/sept/rregalo.html
+++ b/sept/sept/rregalo.html
@@ -72,15 +72,15 @@
         <p class="cuarenta9">Nerita</p>
         <p class="cincuenta">Mailov</p>
         <p class="cincuenta1">Sabrinaa</p>
-        <p class="cincuenta2">Mailoveee</p>
+        <p class="cincuenta2">Mailooooov</p>
         <p class="cincuenta3">Neritaaaaa</p>
         <p class="cincuenta4">Mailooov</p>
         <p class="cincuenta5">Neritaaaaa</p>
-        <p class="cincuenta6">Mailoooveee</p>
+        <p class="cincuenta6">Mailoooooov</p>
         <p class="cincuenta7">Nerita</p>
         <p class="cincuenta8">Mailov</p>
         <p class="cincuenta9">Nerita</p>
-        <p class="sesenta">Mailovee</p>
+        <p class="sesenta">Mailooov</p>
         <p class="sesenta1">Nerita</p>
         <p class="sesenta2">Mailov</p>
         <p class="sesenta3">Nerita</p>
@@ -144,11 +144,11 @@
         <p class="cuarenta-9">Nerita</p>
         <p class="cincuenta-">Mailov</p>
         <p class="cincuenta-1">Sabrinaa</p>
-        <p class="cincuenta-2">Mailoveee</p>
+        <p class="cincuenta-2">Mailoooov</p>
         <p class="cincuenta-3">Neritaaaaa</p>
         <p class="cincuenta-4">Mailooov</p>
         <p class="cincuenta-5">Neritaaaaa</p>
-        <p class="cincuenta-6">Mailoooveee</p>
+        <p class="cincuenta-6">Mailooooov</p>
         <p class="cincuenta-7">Nerita</p>
         <p class="cincuenta-8">Mailov</p>
         <p class="cincuenta-9">Nerita</p>
